<resources>
    <string name="app_name">FamilyMapApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="success">Success!</string>
    <string name="failure">%s</string>
    <string name="welcome">Welcome back, %s %s!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mapNoMarkerClicked">No Event Selected</string>
    <string name="mapClickMarkerPrompt">Select a marker to view more information</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="filter_by_father_s_side_of_the_family">FILTER BY FATHER\'S SIDE OF THE FAMILY</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="filter_by_mother_s_side_of_the_family">FILTER BY MOTHER\'S SIDE OF THE FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="filter_events_based_on_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="logout">Logout</string>
    <string name="return_to_login_screen">RETURN TO LOGIN SCREEN</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="family">FAMILY</string>
    <string name="life_events">LIFE EVENTS</string>
    <string name="settingsMenu">Settings</string>
    <string name="searchMenu">Search</string>

</resources>