<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:stretchColumns="3"
    android:id="@+id/loginFragment"
    tools:context=".UserInterface.LoginFragment">
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/serverHost"/>

        <EditText
            android:id="@+id/serverHostField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            tools:text="10.0.2.2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/serverPort"/>
        <EditText
            android:id="@+id/serverPortField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            tools:text="8080"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/username"/>
        <EditText
            android:id="@+id/usernameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_span="3"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/firstName"/>
        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/lastName"/>
        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"/>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:text="@string/gender" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:id="@+id/genderButtons"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>
    </TableRow>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/Login" />
        <Button
            android:id="@+id/RegisterButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/Register"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="80dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="SEARCH" />
        <Button
            android:id="@+id/settings_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="2dp"
            android:text="SETTINGS"
            />
    </LinearLayout>
</TableLayout>